# rafseg

./: .gitignore  README.md  pyproject.toml
src/ragseg/: __main__.py  pipeline.py
src/utils/: pipeline.py
src/utils/cli/: __init__.py
src/utils/helpers/: folder_to_video.py  image_transfer.py  index_rellis.py  index_rugd.py  rellis_preprocess.py  rugd_preprocess.py
src/utils/metrics/: iou.py
src/utils/vision/embeddings/: base.py  create_store.py  image_vector_store.py  imgbeddings.py  imgbeddings_pipeline.py  vector_store.py
src/utils/vision/seg_gpt/: __init__.py  engine.py  helpers.py  inference.py  model.py  test.zsh
src/utils/vision/seg_gpt/detectron2/checkpoint/: catalog.py  detection_checkpoint.py
src/utils/vision/seg_gpt/detectron2/config/: __init__.py  config.py  defaults.py  instantiate.py  lazy.py
src/utils/vision/seg_gpt/detectron2/engine/: defaults.py  hooks.py  launch.py  train_loop.py
src/utils/vision/seg_gpt/detectron2/evaluation/: cityscapes_evaluation.py  coco_evaluation.py  evaluator.py  fast_eval_api.py  lvis_evaluation.py  panoptic_evaluation.py  pascal_voc_evaluation.py  rotated_coco_evaluation.py  sem_seg_evaluation.py
src/utils/vision/seg_gpt/detectron2/export/: api.py  c10.py  caffe2_modeling.py  caffe2_patch.py  flatten.py  torchscript.py  torchscript_patch.py
src/utils/vision/seg_gpt/detectron2/layers/: batch_norm.py  deform_conv.py  nms.py  roi_align_rotated.py  wrappers.py
src/utils/vision/seg_gpt/detectron2/solver/: build.py
src/utils/vision/seg_gpt/util/: resize.py
src/vlm/: __main__.py  pipeline.py  test_seggpt.py
(+53 files in other folders)
