[tool.poetry]
name = "vlm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "vlm", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
torch = "^2.4.1"
torchvision = "^0.19.1"
timm = "^1.0.9"
fairscale = "^0.4.13"
opencv-python = "^4.10.0.84"
numpy = "<2"
matplotlib = "^3.9.2"
fvcore = "^0.1.5.post20221221"
rich = "^13.8.1"
transformers = "^4.44.2"
onnxruntime-gpu = "^1.19.2"
fastembed-gpu = "^0.3.6"
imgbeddings = "^0.1.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ruff = "^0.6.4"
natsort = "^8.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
